--- a/css/index.css
+++ b/css/index.css
@@ -1,31 +1,74 @@
 /*HEADER*/
 .header-container{
-    background: rgb(243, 185, 199);
+    display: flex;
     padding: 10px;
+    background: #007991;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #78ffd6, #007991);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #78ffd6, #007991); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .header{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
 }
-.header img{
-    display: inline-block ;
+#logo{
     height:82px;
     width:82px;
     border-radius: 50%; 
+    box-sizing: border-box;
+    display: block;
+    margin: 0px 30px 0px 0px;
+}
+#profile{
+    float: right; margin: 0px 0px 0px 450px;
+    height:82px;
+    width:82px;
+    border-radius: 50%; 
+    box-sizing: border-box;
+    display: block;
 }
 
 /*POSTS*/
 .post-container{
-    background:lightgray;
-    border: 1px solid darkgray; 
-    padding: 35px 70px;
-    margin: 10px 35px;
+    background:rgb(230, 227, 227);
+    padding: 8px 8px;
+    margin: 10px 85px;
+    vertical-align: baseline;
+    box-sizing: border-box;
+    /*flexbox*/
+    display:flex;
+    justify-content: center;
 }
-.content-container{
-    background:white;
-    box-align: left;
+.post-container > div {
+    margin:10px;
+}
+.content-container{    
+    margin-right: 25%;
+    box-sizing: border-box;
+    text-align: left;
+}
+.date{
+    text-align: end;
+}
+.autor{
+    text-align: end;
 }
 .image-container{
-    background:aqua;
-    display: inline-block ;
+    border: 1px solid gray;    
+    float: right;
+    width: 800px;
+    box-sizing: border-box;
+    display: block;
+    margin: 5px;
+}
+.image-container img{
+    height:100%;
+    width:100%;
+}
+.content-container p{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: black;
+}
+h3{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
