--- a/views/css/index.css
+++ b/views/css/index.css
@@ -166,6 +166,16 @@ textarea{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.popup-contenedor1 {
+    position: relative;
+    margin:7% auto;
+    padding:30px 50px;
+    background-color: lightgray;
+    color:#333;
+    border-radius: 5px;
+    width:25%;  
+}
+
 #popup2 {
     visibility: hidden;
     opacity: 0;
@@ -186,7 +196,7 @@ textarea{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  }
 
- .popup-contenedor {
+ .popup-contenedor2 {
     position: relative;
     margin:7% auto;
     padding:30px 50px;
@@ -195,6 +205,7 @@ textarea{
     border-radius: 5px;
     width:50%;
 }
+
  a.popup-cerrar {
     position: absolute;
     top:3px;
